--- a/week1/CMakeLists.txt
+++ b/week1/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.28)
+cmake_minimum_required(VERSION 3.16)
 project(week1 VERSION 0.1.0 LANGUAGES C CXX)
 
 
@@ -8,4 +8,4 @@ add_executable(week1_cpp src/week1.cpp)
 
 # Set C++17 standard for the target
 set_property(TARGET week1_cpp PROPERTY CXX_STANDARD 17)
-set_property(TARGET week1_cpp PROPERTY CXX_STANDARD_REQUIRED ON)
+set_property(TARGET week1_cpp PROPERTY CXX_STANDARD_REQUIRED ON)#
