--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_compile_options(-Wall -Wextra)
 add_subdirectory(week2)
 # add_subdirectory(week3)
 # add_subdirectory(reading_material)
+add_subdirectory(assignment_1)
