--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,7 @@ add_compile_options(-Wall -Wextra)
 
 # Optionally add all lecture subdirectories
 # add_subdirectory(week1)
-# add_subdirectory(week2)
-add_subdirectory(week3)
-# add_subdirectory(week4)
-
+add_subdirectory(week2)
+# add_subdirectory(week3)
 # add_subdirectory(reading_material)
+add_subdirectory(assignment_1)
