--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,10 +6,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Common settings for all lectures
 set(CMAKE_BUILD_TYPE Debug)
-add_compile_options(-Wall -Wextra)
+add_compile_options(-Wall -Wextra -pedantic-errors)
 
 # Optionally add all lecture subdirectories
 # add_subdirectory(week1)
-add_subdirectory(week2)
+# add_subdirectory(week2)
 # add_subdirectory(week3)
 # add_subdirectory(reading_material)
+add_subdirectory(assignment_2)
